# rules_mypy

./: .bazelrc  .pylintrc.toml  MODULE.bazel  README.md  WORKSPACE.bazel  version.bzl
.github/: release_notes.template
.github/workflows/: ci.yaml  compile-requirements.yaml  release.yaml
docs/: BUILD.bazel
python/mypy/: defs.bzl  repositories.bzl
python/mypy/private/: BUILD.bazel  mypy.bzl  mypy_runner.py  mypy_toolchain.bzl
python/mypy/private/tests/: BUILD.bazel  test_requirements.in  test_requirements_linux.txt  test_requirements_macos.txt  test_requirements_windows.txt
python/mypy/private/tests/generated_input/: BUILD.bazel  source.py
python/mypy/private/tests/imports/: BUILD.bazel  correct_imported_typings.py  importable.py
python/mypy/private/tests/repo_absolute_imports/consumer/: BUILD.bazel  consumer.py
python/mypy/private/tests/repo_absolute_imports/types_example/: BUILD.bazel  __init__.py
python/mypy/private/tests/simple/: BUILD.bazel  correct_mypy_typings.py
