load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_venv//python:defs.bzl", "py_library")

exports_files([
    "mypy_runner.py",
])

py_library(
    name = "mypy_runner",
    srcs = ["mypy_runner.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//python/mypy:current_py_mypy_toolchain",
        "@rules_venv//python/runfiles",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//python/mypy:__subpackages__"],
    deps = [
        "@rules_venv//python:bzl_lib",
        "@rules_venv//python/venv:bzl_lib",
    ],
)
