load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//python/mypy:defs.bzl", "py_mypy_test")

package(default_testonly = 1)

py_library(
    name = "correct_imported_mypy_typings",
    srcs = [
        "correct_imported_typings.py",
        ":importable.py",
    ],
)

py_test(
    name = "correct_imported_typings_unit_test",
    srcs = [
        "correct_imported_typings.py",
    ],
    main = "correct_imported_typings.py",
    deps = [
        ":correct_imported_mypy_typings",
    ],
)

py_mypy_test(
    name = "correct_imported_mypy_test",
    target = ":correct_imported_mypy_typings",
)
