load("@rules_python//python:defs.bzl", "py_library")
load("//python/mypy:defs.bzl", "py_mypy_test")

py_library(
    name = "consumer",
    srcs = ["consumer.py"],
    visibility = ["//python/mypy/private/tests:__subpackages__"],
    deps = [
        "//python/mypy/private/tests/repo_absolute_imports/types_example",
    ],
)

py_mypy_test(
    name = "consumer_mypy_test",
    target = ":consumer",
)
